@@ -1,6 +1,7 @@
 package Object::Remote::MiniLoop;
 
 use IO::Select;
+use Time::HiRes qw(time);
 use Moo;
 
 # this is ro because we only actually set it using local in sub run
@@ -9,6 +10,8 @@ has is_running => (is => 'ro', clearer => 'stop');
 
 has _read_watches => (is => 'ro', default => sub { {} });
 has _read_select => (is => 'ro', default => sub { IO::Select->new });
+
+has _timers => (is => 'ro', default => sub { [] });
 
 sub pass_watches_to {
   my ($self, $new_loop) = @_;
@@ -36,6 +39,26 @@ sub unwatch_io {
     $self->_read_select->remove($fh);
     delete $self->_read_watches->{$fh};
   }
+  return;
+}
+
+sub watch_time {
+  my ($self, %watch) = @_;
+  my $at = $watch{at} || do {
+    die "watch_time requires at or after" unless my $after = $watch{after};
+    time() + $after;
+  };
+  die "watch_time requires code" unless my $code = $watch{code};
+  my $timers = $self->_timers;
+  my $new = [ $at => $code ];
+  @{$timers} = sort { $a->[0] <=> $b->[0] } @{$timers}, $new;
+  return "$new";
+}
+
+sub unwatch_time {
+  my ($self, $id) = @_;
+  @$_ = grep !($_ eq $id), @$_ for $self->_timers;
+  return;
 }
 
 sub loop_once {
@@ -48,6 +71,12 @@ sub loop_once {
   foreach my $fh (@$readable) {
     $read->{$fh}();
   }
+  my $timers = $self->_timers;
+  my $now = time();
+  while (@$timers and $timers->[0][0] <= $now) {
+    (shift @$timers)->[1]->();
+  }
+  return;
 }
 
 sub want_run {
@@ -58,6 +87,7 @@ sub want_run {
 sub run_while_wanted {
   my ($self) = @_;
   $self->loop_once while $self->{want_running};
+  return;
 }
 
 sub want_stop {
@@ -71,6 +101,7 @@ sub run {
   while ($self->is_running) {
     $self->loop_once;
   }
+  return;
 }
 
 1;
